# etherbotix

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
etherbotix/: CMakeLists.txt  __init__.py  package.xml
etherbotix/include/etherbotix/: dynamixel.hpp  etherbotix.hpp  etherbotix_motor.hpp
etherbotix/src/: etherbotix.cpp  etherbotix_motor.cpp
etherbotix_python/: ax12.py  controllers.py  diff_controller.py  driver.py  dynamixel_controller.py  etherbotix.py  follow_controller.py  gps_publisher.py  joints.py  linear_controller.py  monitor_etherbotix.py  publishers.py  simple_teleop.py
etherbotix_python/tools/: get_trace.py  monitor_etherbotix.py  read_etherbotix.py  read_servo.py  read_unique_id.py  reboot.py  upload.py
include/etherbotix/: copy_float.hpp  dynamixel.hpp  dynamixel_servo.hpp  etherbotix.hpp  etherbotix_motor.hpp  etherbotix_ros.hpp
nodes/: driver.py  gps_publisher.py  simple_teleop.py
scripts/: get_trace  get_trace.py  monitor  monitor_etherbotix.py  read_etherbotix.py  read_servo  read_unique_id.py  reboot.py  upload  upload.py
src/: dynamixel_servo.cpp  etherbotix.cpp  etherbotix_motor.cpp  etherbotix_ros.cpp  gps_publisher.cpp  ld06_publisher.cpp  python.cpp  read_etherbotix.cpp  read_unique_id.cpp  reboot.cpp
src/etherbotix_python/: controllers.py  diff_controller.py  etherbotix.py  linear_controller.py  publishers.py
